# rusty-iterators-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.md  README.md  build.sh  format.sh
.github/workflows/: build-and-test.yml  tests.yml
benchmarks/: CMakeLists.txt  iterator.benchmark.cpp
examples/aoc/: CMakeLists.txt  main.cpp
include/rusty_iterators/: chain.hpp  concepts.hpp  cycle.hpp  enumerate.hpp  file_iterator.hpp  filter.hpp  filter_map.hpp  inspect.hpp  interface.fwd.hpp  interface.hpp  interperse.hpp  iterator.hpp  iterator_interface.hpp  map.hpp  moving_window.hpp  peekable.hpp  skip.hpp  step_by.hpp  take.hpp  test.hpp  zip.hpp
tests/: CMakeLists.txt  chain.test.cpp  cycle.test.cpp  enumerate.test.cpp  file_iterator.test.cpp  filter.test.cpp  filter_map.test.cpp  integration.test.cpp  interperse.test.cpp  iterator.test.cpp  map.test.cpp  moving_window.test.cpp  peekable.test.cpp  skip.test.cpp  step_by.test.cpp  take.test.cpp  test.cpp  zip.test.cpp
tools/: build.sh  format.sh
